# common

./: Command Prompt.lnk  Common Component Stack - 1.0.vsd  common.sln
Document/: Common Component Stack - 1.0.vsd  State Machine - 1.0.vsd
application/100k Challange/2015/Source/Agents/2015-SpaceInvaders-Bot-Cpp-master/: .gitignore  CMakeLists.txt  README.md  Spacebot.sln  Spacebot.vcxproj  Spacebot.vcxproj.filters  cmd.exe.lnk  compile.sh  run.bat  run.sh  test.sh
application/100k Challange/2015/Source/Agents/2015-SpaceInvaders-Bot-Cpp-master/include/: alien.h  enemy_bullet.h  game_entity.h  game_state.h  move.h  move_string_mapper.h  player_missile.h  shield.h  spacebot.h  spaceship.h
application/100k Challange/2015/Source/Agents/2015-SpaceInvaders-Bot-Cpp-master/main/: main.cpp
application/100k Challange/2015/Source/Agents/2015-SpaceInvaders-Bot-Cpp-master/src/: alien.cpp  enemy_bullet.cpp  game_entity.cpp  game_state.cpp  move_string_mapper.cpp  player_missile.cpp  shield.cpp  spacebot.cpp  spaceship.cpp
application/100k Challange/2015/Source/Agents/2015-SpaceInvaders-Bot-Cpp-master/test/: game_state.cpp  move_string_mapper.cpp
debug/: console.lnk  console_application.exp  console_application.ilk  console_application.lib  cpu_performance.ilk  hello_world.ilk  math_ml.exp  math_ml.ilk  math_ml.lib  neural_network.exp  neural_network.ilk  neural_network.lib  run.bat  sound.ilk  static_utility.exp  static_utility.ilk  static_utility.lib  stop_clock.exp  stop_clock.ilk  stop_clock.lib  test.bat  test_console_application.ilk  test_math_ml.ilk  (+2 more)
(+534 files in other folders)
